# toady-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  .roomodes  .windsurfrules  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  coverage.json  coverage_unit.json  examples.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.cursor/rules/: dev_workflow.mdc  taskmaster.mdc
.github/workflows/: ci-uv.yml  ci.yml  publish.yml  release.yml
.roo/rules/: dev_workflow.md  roo_rules.md  self_improve.md  taskmaster.md
.roo/rules-architect/: architect-rules
.roo/rules-ask/: ask-rules
.roo/rules-boomerang/: boomerang-rules
.roo/rules-code/: code-rules
.roo/rules-debug/: debug-rules
.roo/rules-test/: test-rules
.taskmaster/: config.json
.taskmaster/docs/: branch-mapping.txt  prd.txt
.taskmaster/reports/: task-complexity-report.json
docs/: .gitkeep
scripts/: ci_check.py  test_config.py
src/toady/: __init__.py  bulk_reply_resolve_service.py  cli.py  command_utils.py  error_handling.py  exceptions.py  fetch_service.py  format_interfaces.py  format_selection.py  formatters.py  github_service.py  graphql_parser.py  graphql_queries.py  json_formatter.py  models.py  parsers.py  pr_selection.py  pr_selector.py  pretty_formatter.py  reply_mutations.py  reply_service.py  resolve_mutations.py  resolve_service.py  rollback_handlers.py  schema_cli.py  schema_validator.py  transaction_manager.py  utils.py  validation.py
src/toady/commands/: __init__.py  fetch.py  reply.py  resolve.py  schema.py
src/toady/formatters/: __init__.py  format_interfaces.py  format_selection.py  formatters.py  json_formatter.py  pretty_formatter.py
src/toady/models/: __init__.py  models.py
src/toady/parsers/: __init__.py  graphql_parser.py  graphql_queries.py  parsers.py
src/toady/services/: __init__.py  fetch_service.py  github_service.py  pr_selection.py  pr_selector.py  reply_service.py  resolve_service.py
src/toady/validators/: __init__.py  node_id_validation.py  schema_validator.py  validation.py
test-reports/: coverage.json  test_analysis.json
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_exceptions.py  test_format_interfaces.py  test_github_service.py  test_graphql_parser.py  test_graphql_queries.py  test_json_formatter.py  test_mock_example.py  test_models.py  test_node_id_validation.py  test_parsers.py  test_reply_mutations.py  test_reply_service.py  test_resolve_mutations.py  test_resolve_service.py  test_schema_validator.py  test_setup.py  test_validation.py
tests/integration/: __init__.py  conftest.py  test_schema_validation_integration.py
tests/integration/cli/: test_fetch_cli.py  test_format_selection_cli.py  test_main_cli.py  test_reply_cli.py  test_resolve_cli.py  test_schema_cli.py
tests/integration/real_api/: README.md  __init__.py  test_authentication_flows.py  test_end_to_end_workflows.py  test_network_resilience.py  test_performance_monitoring.py
tests/unit/: __init__.py  test_cli.py  test_command_utils.py  test_error_handling.py  test_fetch_service_pr_selection.py  test_format_selection.py  test_pr_selector.py  test_rollback_handlers.py  test_transaction_manager.py  test_utils.py
tests/unit/commands/: README.md  test_fetch.py  test_reply.py  test_resolve.py  test_schema.py
tests/unit/formatters/: __init__.py  test_color_and_terminal.py  test_comprehensive_formatting.py  test_format_interfaces.py  test_formatters.py  test_json_formatter.py  test_performance_and_memory.py  test_pretty_formatter.py
tests/unit/models/: __init__.py  test_model_edge_cases.py  test_models.py
tests/unit/parsers/: __init__.py  test_graphql_parser.py  test_graphql_queries.py  test_parsers.py
tests/unit/services/: test_bulk_reply_resolve_service.py  test_bulk_reply_resolve_service_enhanced.py  test_fetch_service.py  test_github_service.py  test_pr_selection.py  test_reply_service.py  test_resolve_service.py
tests/unit/validators/: __init__.py  test_node_id_validation.py  test_schema_validator.py  test_validation.py
